Update product image in index.html

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ header h1 { font-size:3.5rem; font-weight:900; }
 <script>
 // === 30 ТОВАРІВ ===
 const products = [
-  {id:1, cat:"tree", title:"Ялинка «Королівська» Преміум 210 см", img:"https://images.unsplash.com/photo-1606836576981-c7c2b52f2e6a?w=800", price:6990, old:9990, badge:"NEW", stars:"★★★★★", rating:"4.9 (1273)", specs:"• Висота: 210 см<br>• Преміум ПВХ + литі гілки<br>• Шишки та ягоди в комплекті<br>• 5 років гарантії", reviews:"Найкраща ялинка, яку ми купували! Дуже пишна та реалістична!"},
+  {id:1, cat:"tree", title:"Ялинка «Королівська» Преміум 210 см", img:"<img src='https://i.postimg.cc/SQ8BLvnG/alinkaaaa.jpg' border='0' alt='alinkaaaa'>", price:6990, old:9990, badge:"NEW", stars:"★★★★★", rating:"4.9 (1273)", specs:"• Висота: 210 см<br>• Преміум ПВХ + литі гілки<br>• Шишки та ягоди в комплекті<br>• 5 років гарантії", reviews:"Найкраща ялинка, яку ми купували! Дуже пишна та реалістична!"},
   {id:2, cat:"tree", title:"Ялинка засніжена «Скандинавська» 180 см", img:"https://images.unsplash.com/photo-1578662996442-48f58f2b8bc5?w=800", price:5290, stars:"★★★★☆", rating:"4.7 (892)", specs:"• Висота: 180 см<br>• Ефект снігу<br>• 1200 гілок", reviews:"Виглядає казково! ★★★★★"},
   {id:3, cat:"tree", title:"Ялинка лита «Альпійська 240 см", img:"https://images.unsplash.com/photo-1542282088-0b220d360d5b?w=800", price:12490, old:14990, badge:"-16%", stars:"★★★★★", rating:"5.0 (543)", specs:"• 100% лиття<br>• 8 років гарантії", reviews:"Королева ялинок!"},
   {id:4, cat:"tree", title:"Міні ялинка в горщику 90 см з LED", img:"https://images.unsplash.com/photo-1572542706454-90c9b1efd4a0?w=800", price:1990, stars:"★★★★☆", rating:"4.6 (2100)", specs:"• 100 LED лампочок<br>• На батарейках", reviews:"Чудова на стіл!"},
